styles.css
/******************************************************

UNIVERSAL STLYING
*********************************************************/

* {
	margin: 0;
	padding: 0;
	border: 0;
}

article, aside, details, figcaption, figure, footer, header, main, nav, section, summary {
    display:block;
}



body {
	background: #fff;
  font-family: 'Lato', sans-serif;
	color: #E0E0E0;
	display: flex;
	flex-direction: column;
	padding: 1% 0 0;
	min-height: 100vh;
}

a {
	text-decoration: none;
}

.content, .about {
	background:  #08161c;
	flex: 1 0 auto;
	margin-top: -13px;
  position: relative;
  z-index: 1;
}

.home
.content::after {
background: inherit;
bottom: 0;
content: '';
display: block;
height: 50%;
left: 0;
position: absolute;
right: 0;
transform: skewY(-1.5deg);
transform-origin: 100%;
z-index: -1;
}

.aboutpage, .contact, .portfolio {
	background: #08161c;
}
footer {
	flex-shrink: 0;
}

h1, h2, h3, h4, h5, h6 {
	font-family: 'Raleway', sans-serif;
	font-weight: lighter;
}

/***************************************************
hamburger menu stylesheet

******************************************************/

.hamburger{
  background:none;
  position:absolute;
  top:0;
  right:0;
  line-height:45px;
  padding:5px 15px 0px 15px;
  color: #fff;
  border:0;
  font-size:1.4em;
  font-weight:bold;
  cursor:pointer;
  outline:none;
  z-index:10000000000000;
}
.cross{
  background: none;
  position: absolute;
  top: 0;
  right:0;
  padding: 7px 10% 0 15px;
  color:#fff;
  border:0;
  font-size:3em;
  line-height:65px;
  font-weight:bold;
  cursor:pointer;
  outline:none;
  z-index:10000000000000;
}
.menu{z-index:1000000; font-weight:bold; font-size:0.8em; width:100%; background:#2a48ac;  position:absolute; text-align:center; font-size:12px; color: #8086D7;}
.menu ul {margin: 0; padding: 0; list-style-type: none; list-style-image: none;}
.menu li {display: block;   padding:15px 0 15px 0; border-bottom:#dddddd 1px solid;}
.menu li:hover{display: block;    background:#ffffff; padding:15px 0 15px 0; border-bottom:#dddddd 1px solid;}
.menu ul li a { text-decoration:none;  margin: 0; color:#c6caff;}
.menu ul li a:hover { color: #846abb; text-decoration:none; transition: .2s;}
.menu a{text-decoration:none; color:#dddddd;}
.menu a:hover{text-decoration:none; color:#666;}

/****************************************************************/

/*******************************************************************

INDEX.HTML STYLING

**********************************************************************/


.desktop-menu {
	display: none;
}

section {
	text-align: center;
	padding: 10px 4%;
	margin-top: 220px;
  padding-bottom: 10%;
}

section h1 {
	animation: bounce ease-in .7s .3s backwards;
	font-weight: bold;
	font-size: 2.5rem;
	text-shadow: 2px 2px #08161c63;
	margin: auto;
}

section p {
	animation: fadein ease-out .8s .9s backwards;
	font-size: 1.5rem;
}

section a {
	animation: fadein ease-in-out 1s 1.5s backwards;
	background: #8086d7;
  text-decoration: none;
  padding: 10px;
  position: relative;
  top: 25px;
}

span {
 color: #C6CAFF;
}

.bg-color {
	background: black;
	width: 100%;
	padding: 20px;
}


footer {
  margin-top: 60px;
	padding: 20px;
}

footer ul {
	list-style: none;
	text-align: center;
}

footer ul li {
	display: inline;
}


footer ul li a {
	text-decoration: none;
	color: #c6caff;
}

footer p {
	text-align: center;
	color: #c6caff;
}
/*==============================================================

MIN WIDTH 320

================================================================*/

@media (min-width: 320px) {
	.headshot {
		width: 100%;
		max-width: 200px;
	}

	.hamburger {
		right: 8%;
	}
}

/*===============================END MIN WIDTH 320=================*/




/*************************START MIN WIDTH 620**********************/

@media (min-width: 620px) {
	.section {
		padding: 0;
 }
  .section h1 {
		max-width: 400px;
	}

}

/***********************END MIN WIDTH 620************************/

/**********************BEGIN MIN WDTH 850***********************/

section a:hover {
	background: #2a48ac;
	color: #fff;
	transition: .5s;
}

/************************END 850******************************/

/*********************************START MIN WIDTH 1000***************/

@media (min-width: 1000px) {

	.hamburger {
		display: none;
  }

  .desktop-menu {
	display: block;
}
	.desktop-right {
		float: right;
		margin-top: 1%;
		width: 33%;
	}

	.desktop-menu li {
		display: inline;
	}

.desktop-menu li a {
		text-decoration: none;
		color: white;
		font-weight: lighter;
		padding: 5px 4%;
}

.desktop-menu li a:hover {
	background: white;
	color: black;
}
.desktop-menu li a:active {
	border-bottom: 1px solid white;
	color: #C6CAFF;
}

  .section h1 {
		font-size: 3em;
		max-width: 600px;

 }

/*******************************END MIN WIDTH 1000PX****/

@media (max-width: 1000px) {
	.desktop-menu {
		display: none;
	}
}
}

@media (max-width: 620px) {
	.section h1 {
		max-width: 300px;
	}
}

/*************************************************************ABOUT.HTML STYLES*

                        ABOUT.HTML STYLING
***************************************************************************/
img.logo {
    position: absolute;
    top: 0;
    left: 5%;
}

.about_header {
	padding-left: 5%;
	margin-top: 80px;
	letter-spacing: 2px;
}
article {
    margin-top: 10px;
    padding: 0 5%;
		line-height: 2;
}

article h3 {
	letter-spacing: 2px;
}
aside {
	padding: 0 5%;
	text-align: center;
	margin-top: 20px;
}

aside img {
	border-radius: 60%;
	width: 100%;
	margin-top: 5%;
}

aside figcaption {
	font-size: 0.7em;
	font-style: italic;
}

footer {
	clear: both;
	margin-top: 100px;
}
/********************MINWIDTH 450*********************/
@media (min-width: 450px) {
	aside img {
		width: 70%;
	}
}
/***********************MINWIDTH 900*******************/
@media (min-width: 900px) {
		article {
    margin-top: 30px;
    line-height: 3;
    padding-left: 5%;
    width: 50%;
  }

	aside {
    text-align: center;
    float: right;
    width: 40%;
    margin-top: -486px;
 }
}
/************************MINWIDTH 955*********************/
@media (min-width: 955px) {
	aside {
		margin-top: -435px;
	}
}


/**************************************************************************

                  PORTFOLIO.HTML STYLING

********************************************************************************/
.gallery h2 {
	animation: bounce ease-in 1.3s .3s backwards;
	text-align: center;
	margin-top: 90px;
}
.bx-wrapper {
	position: relative;
	margin: auto;
	margin-top: 50px;
	margin-bottom: 60px;
}

/*************************************************************CONTACT>HTML STYLES*

                        CONTACT.HTML STYLING
***************************************************************************/

#container {
	animation: fadein ease-in 1s .4s backwards;
    width: 51%;
    height: 389px;
    background-color: gray;
    margin: auto;
    padding: 2%;
    margin-top: 140px;
}

.contact a {
	color: #fff;
}

.arrow {
  text-align: center;
  margin: 8% 0;
}
.bounce {
  -moz-animation: arrow 2s infinite;
  -webkit-animation: arrow 2s infinite;
  animation: arrow 2s infinite;
}

@keyframes arrow {
  0%, 20%, 50%, 80%, 100% {
    transform: translateY(0);
  }
  40% {
    transform: translateY(-30px);
  }
  60% {
    transform: translateY(-15px);
  }
}
.contactform {
 display: flex;
 justify-content: center;
 padding: 3% 6%;
 margin: 200px auto;
}

.contatform h1 {
	display: block;
}

form {
	animation: fadein ease 3s 2s backwards;
  background: #dddddd;
  padding: 20px 90px;
	color: #08161c;
}

form h2 {
	text-align: center;
	margin-bottom: 6%;
}
label.label {
 display: block;
 padding-right: 4%;
}

.first-name, .last-name, .email, .message {
	margin-bottom: 5%;
}

input#first-name, input#last-name, input#email {
	background: none;
 	border-bottom: 2px solid gray;
	display: block;
	padding: 1%;

}

textarea#message {
  background: none;
  border: 1px solid gray;
  margin-top: 5%;
}

input[type="submit"] {
  padding: 6px 30px;
  margin-top: 7%;
}


input[type="submit"]:hover {
 background: black;
 color: #fff;
 transition: .3s;
}

/*********************************MAXWIDTH QUERY 655*****/

@media (max-width: 655px) {
	#container {
		width: 94%;
	}
}

@keyframes fadein {
	0% {
		opacity: 0;
		transform: scale(0.1);

	}

	100% {
		opacity: 1;
		transform: scale(1);

	}

}

@keyframes bounce {
  0% {
    opacity: 0;
    transform: translateY(-4rem) scale(.8);
  }
  100% {
    opacity: 1;
    transform: none;
  }
}

